JR-493 Bundle UI  - All context menues /action dropdown CSS alignment  - Fixed the table subRows css

--- a/src/directives/jf_context_menu/jf_context_menu.style.less
+++ b/src/directives/jf_context_menu/jf_context_menu.style.less
@@ -29,17 +29,14 @@ jf-context-menu {
       }
       &:hover {
         color: @greenFontHeader;
-        background-color: @greenBGDropdownHover !important;
-        box-shadow: inset 3px 0 0 0 @greenFontHeader;
+        background-color: @grayBGLight !important;
         &[icon-name~="icon-clear"] {
           color: @redError;
-          background: #F4E7E7 !important;
           .action-icon {
             &:before {
               color: @redError;
             }
           }
-          box-shadow: inset 3px 0 0 0 @redError;
         }
       }
     }
