--- a/src/ui_components/jf_table_view/jf-table-view.less
+++ b/src/ui_components/jf_table_view/jf-table-view.less
@@ -31,7 +31,6 @@
   }
 
   .jf-table-top {
-//    background-color: blue;
     display: flex;
     flex-direction: row;
     margin-bottom: 20px;
@@ -123,7 +122,6 @@
     }
     .jf-table-row {
       display: flex;
-//      overflow: hidden;
       width: 100%;
       white-space: nowrap;
       padding: 0;
@@ -160,12 +158,9 @@
           }
           &:hover {
             color: @greenFontHeader;
-            background-color: @greenBGDropdownHover!important;
-            box-shadow: inset 3px 0 0 0 @greenFontHeader;
+            background-color: @grayBGLight!important;
             &[icon-name="icon icon-clear"] {
               color: @redError;
-              background: #F4E7E7!important;
-              box-shadow: inset 3px 0 0 0 @redError;
             }
           }
         }
@@ -219,37 +214,51 @@
       }
       &:not(.headers) {
         border: none;
-        border-bottom: 1px solid @grayBGHover;
-
+        &:last-child {
+          border-bottom: 1px solid @grayBGHover;
+        }
+        &:not(:first-child) {
+          border-top: 1px solid #e0e0e0;
+        }
+        &.sub-row {
+          border-top: none;
+          .row-expander {
+            display: none;
+          }
+        }
         &:hover {
           background-color: @grayBGHover;
         }
       }
-
+      &.headers {
+        .jf-table-cell-content.row-expander-content {
+          padding-left: 0;
+        }
+      }
       &:not(:first-child) {
         border-top: none;
       }
       .jf-table-cell {
         display: inline-table;
-        //padding: 5px;
         overflow: hidden;
         z-index: 1;
         position: relative;
 
         .row-expander {
-          width: 26px;
-          position: absolute;
-          top: 0;
-          left: 0;
+          width: 60px;
+          position: relative;
+          top: -3px;
+          display: table-cell;
+
           &:not(.placeholder) {
-            background-color: lightyellow;
+            background: transparent;
             cursor: pointer;
-            .icon-more {
-              transform: rotate(-90deg) translate(-15px, 0) scale(1.5, 1.5);
+            .icon-addons-arrow-right {
+              transform: rotate(0deg) translate(0, 15px) scale(1, 1);
               margin: 4px 18px 0 7px;
               display: inline-block;
               &.expanded {
-                transform: rotate(0deg) translate(0, 16px) scale(1.5, 1.5);
+                transform: rotate(90deg) translate(15px, 0) scale(1, 1);
               }
             }
           }
@@ -259,7 +268,6 @@
           border-right: 1px @greenBorderLight dotted !important;
         }
         &.drag-left {
-          //          border-left: 1px @greenBorderLight dashed;
         }
         &.selection {
           &.single-selection {
@@ -327,12 +335,6 @@
 
           &:not(.group-header):not(.row-expander-content) {
             max-width: 0;
-          }
-          &.group-header {
-
-          }
-          &.row-expander-content {
-            padding-left: 32px;
           }
           .grid-cell-checkbox {
             line-height: 40px;
